--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Web3 connection
-VITE_RPC_ENDPOINT="https://api.mainnet-beta.solana.com"
+VITE_RPC_ENDPOINT="https://mainnet.helius-rpc.com/?api-key=a318c805-7254-4952-b2d4-287198e8e898"
 # VITE_RPC_ENDPOINT="http://127.0.0.1:8899"
